Add section on jvm arguments required